// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "size": 6127,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "main.3f985d5a8dc26b84441e.js",
    4963,
    Object {
      "chunkhash": "3f985d5a8dc26b84441e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.3f985d5a8dc26b84441e.js.gz",
      },
      "size": 4963,
    },
  ],
  Array [
    "main.3f985d5a8dc26b84441e.js.gz",
    1472,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1472,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
      },
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
    20,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 20,
    },
  ],
  Array [
    "main.3f985d5a8dc26b84441e.js",
    4963,
    Object {
      "chunkhash": "3f985d5a8dc26b84441e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.3f985d5a8dc26b84441e.js.gz",
      },
      "size": 4963,
    },
  ],
  Array [
    "main.3f985d5a8dc26b84441e.js.gz",
    1472,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1472,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: warnings 1`] = `Array []`;
